[gd_scene load_steps=2 format=3 uid="uid://cgbvh4lh06bt"]

[ext_resource type="Script" path="res://menu_screens/connection_screen.gd" id="1_xa0f6"]

[node name="ConnectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xa0f6")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.5
offset_top = -20.0
offset_right = 84.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Host"

[node name="ConnectButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Connect"

[node name="BackButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="BoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="BoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="BoxContainer/BackButton" to="." method="_on_back_button_pressed"]
